--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>NLP_Platform</groupId>
   <artifactId>nlp_platform</artifactId>
   <version>0.0.3-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <properties>
     <!-- add variables here and refer to them as ${variable} below -->
@@ -21,7 +22,68 @@
   
   <profiles>
     <profile>
-      <id>main</id>
+      <id>tri_guideme</id>
+      <build>
+	<plugins>
+	  <plugin>
+	    <artifactId>maven-compiler-plugin</artifactId>
+	    <version>3.7.0</version>
+	    <configuration>
+	      <source>1.10</source>
+	      <target>1.10</target>
+	    </configuration>
+	  </plugin>
+	  
+	  
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.20.1</version>
+	    <configuration>
+	      <systemPropertyVariables>
+		<log4j.configuration>file:${project.build.directory}/../src/logging.properties</log4j.configuration>
+	      </systemPropertyVariables>
+	      <forkCount>0</forkCount>
+	      <parallel>classes</parallel>
+	      <threadCount>6</threadCount>
+	      <!-- 
+		   When debugging unit tests, make this 0 to enable breakpoints. 0 will run unit tests in the main thread.
+		   When running code, make this 1. The application has to fork. Otherwise, nd4j will throw a runtime
+		   error about how a library was already loaded. It gets loaded by the unit tests and not released.  
+	      -->
+	      <forkCount>1</forkCount> 
+	    </configuration>
+	  </plugin>
+	  
+	  <plugin>
+	    <groupId>org.codehaus.mojo</groupId>
+	    <artifactId>exec-maven-plugin</artifactId>
+	    <version>1.6.0</version>
+	    <executions>
+	      <execution>
+		<goals>
+		  <goal>java</goal>
+		</goals>
+	      </execution>
+	    </executions>
+	    
+	    <configuration>
+	      <attach>true</attach>
+	      <mainClass>main_class.main_class</mainClass>
+	      <!-- <mainClass>tf_idf.main_class</mainClass> -->
+	      <arguments>
+		        <!-- LDA using gibbs sampling -->
+                <argument>
+                  /home/ben/workspace/opennlp_processing/desc/ContentProcessingEngine/tri_guideme/Collection_Processor_Cumulation_GibbsLDA.xml
+                </argument>
+	      </arguments>
+	    </configuration>
+	  </plugin>
+	</plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>fjsp</id>
       <build>
         <plugins>
           <plugin>
@@ -39,6 +101,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.20.1</version>
             <configuration>
+              <skipTests>false</skipTests>
               <systemPropertyVariables>
                 <log4j.configuration>file:${project.build.directory}/../src/logging.properties</log4j.configuration>
               </systemPropertyVariables>
@@ -78,29 +141,107 @@
             </executions>
           </plugin>
           
+          <!-- this is from baeldung.com/executable-jar-with-maven -->
+          <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <executions>
+		        <execution>
+		            <id>copy-dependencies</id>
+		            <phase>prepare-package</phase>
+		            <goals>
+		                <goal>copy-dependencies</goal>
+		            </goals>
+		            <configuration>
+		                <outputDirectory>
+		                    ${project.build.directory}/libs
+		                </outputDirectory>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+		
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+		    <version>3.1.1</version>
+		    <configuration>
+		        <archive>
+		            <manifest>
+		                <addClasspath>true</addClasspath>
+		                <classpathPrefix>libs/</classpathPrefix>
+		                <mainClass>
+		                	<!-- set the main class to the fully qualified domain name. 
+		                	Basically, I tested this by importing the main_class.main_class 
+		                	module and it worked. -->
+		                    main_class.main_class
+		                </mainClass>
+		            </manifest>
+		        </archive>
+		    </configuration>
+		</plugin>
+          
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>1.6.0</version>
             <executions>
               <execution>
+              	<id>setup</id>
                 <goals>
                   <goal>java</goal>
                 </goals>
+                
+                <configuration>
+	              <attach>true</attach>
+	              <mainClass>main_class.main_class</mainClass>
+	              <arguments>
+	                <argument>
+	                	./desc/ContentProcessingEngine/FJSP/Collection_Processor_Setup.xml
+	                </argument>
+	              </arguments>
+	            </configuration>
               </execution>
+              
+              <execution>
+              	<id>read_data</id>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+                <configuration>
+	              <attach>true</attach>
+	              <mainClass>main_class.main_class</mainClass>
+	              <arguments>
+	                <argument>
+	                	./desc/ContentProcessingEngine/FJSP/FJSP_Collection_Processor_Document_Data_Ingest.xml
+	                </argument>
+	                <argument>
+	                	./desc/ContentProcessingEngine/FJSP/FJSP_Collection_Processor_Model_Data_Ingest.xml
+	                </argument>
+	              </arguments>
+	            </configuration>
+              </execution>
+              
+              <execution>
+              	<id>process_data</id>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+                <configuration>
+	              <attach>true</attach>
+	              <mainClass>main_class.main_class</mainClass>
+	              <arguments>
+	                <argument>
+	                	./desc/ContentProcessingEngine/FJSP/FJSP_Collection_Processor_Document_Data_Process.xml
+	                </argument>
+	                <argument>
+	                	./desc/ContentProcessingEngine/FJSP/FJSP_Collection_Processor_Model_Data_Process.xml
+	                </argument>
+	              </arguments>
+	            </configuration>
+              </execution>
+              
             </executions>
-            
-            <configuration>
-              <attach>true</attach>
-              <mainClass>main_class.main_class</mainClass>
-              <!-- <mainClass>tf_idf.main_class</mainClass> -->
-              <arguments>
-                <!-- add testing CPE xml documents here -->
-                <argument>
-                  Collection_Processor_Example.xml
-                </argument>
-              </arguments>
-            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -111,39 +252,39 @@
   <dependency>
     <groupId>org.nd4j</groupId>
     <artifactId>nd4j-native-platform</artifactId>
-    <version>1.0.0-beta3</version>
+    <version>1.0.0-beta4</version>
     <classifier>linux-x86_64</classifier>
   </dependency>
   
   <dependency>
     <groupId>org.deeplearning4j</groupId>
     <artifactId>deeplearning4j-core</artifactId>
-    <version>1.0.0-beta3</version>
+    <version>1.0.0-beta4</version>
   </dependency>
   
   <dependency>
     <groupId>org.deeplearning4j</groupId>
     <artifactId>deeplearning4j-nlp</artifactId>
-    <version>1.0.0-beta3</version>
+    <version>1.0.0-beta4</version>
   </dependency>
   
   <dependency>
     <groupId>org.deeplearning4j</groupId>
     <artifactId>deeplearning4j-nlp-uima</artifactId>
-    <version>1.0.0-beta3</version>
+    <version>1.0.0-beta4</version>
   </dependency>
   
   <dependency>
     <groupId>net.java.dev.jna</groupId>
     <artifactId>jna</artifactId>
-    <version>5.1.0</version>
+    <version>5.2.0</version>
   </dependency>
   
   <!-- Spell checker -->
   <dependency>
     <groupId>org.languagetool</groupId>
     <artifactId>language-en</artifactId>
-    <version>4.3</version>
+    <version>4.4</version>
   </dependency>
   
   <!-- UIMA -->
@@ -151,14 +292,14 @@
   <dependency>
     <groupId>org.apache.uima</groupId>
     <artifactId>uimaj-core</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2</version>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.apache.uima/uimaj-tools -->
   <dependency>
     <groupId>org.apache.uima</groupId>
     <artifactId>uimaj-tools</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2</version>
   </dependency>
   
   <!-- OpenNLP -->
@@ -168,7 +309,7 @@
   <dependency>
     <groupId>org.apache.opennlp</groupId>
     <artifactId>opennlp-tools</artifactId>
-    <version>1.9.0</version>
+    <version>1.9.1</version>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-maxent -->
@@ -182,7 +323,7 @@
   <dependency>
     <groupId>org.apache.opennlp</groupId>
     <artifactId>opennlp-brat-annotator</artifactId>
-    <version>1.9.0</version>
+    <version>1.9.1</version>
   </dependency>
   
   <!-- Hadoop -->
@@ -190,21 +331,21 @@
   <dependency>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-core_2.11</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.1</version>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
   <dependency>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-sql_2.11</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.1</version>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
   <dependency>
     <groupId>org.apache.hadoop</groupId>
     <artifactId>hadoop-common</artifactId>
-    <version>3.1.1</version>
+    <version>3.1.2</version>
     <scope>provided</scope>
   </dependency>
   
@@ -220,7 +361,7 @@
   <dependency>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-lang3</artifactId>
-    <version>3.8.1</version>
+    <version>3.9</version>
   </dependency>
   
   <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
@@ -255,7 +396,7 @@
   <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.13</version>
+    <version>8.0.14</version>
   </dependency>
   
   <dependency>
@@ -280,7 +421,7 @@
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.12</version>
+    <version>4.13-beta-1</version>
   </dependency>
   
   <!-- Mallet API for Machine Learning -->
@@ -299,19 +440,19 @@
   <dependency>
     <groupId>org.apache.pdfbox</groupId>
     <artifactId>pdfbox</artifactId>
-    <version>2.0.13</version>
+    <version>2.0.14</version>
   </dependency>
   
   <dependency>
     <groupId>org.apache.pdfbox</groupId>
     <artifactId>pdfbox-tools</artifactId>
-    <version>2.0.13</version>
+    <version>2.0.14</version>
   </dependency>
   
   <dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
-    <version>1.11.3</version>
+    <version>1.12.1</version>
   </dependency>
   
   <dependency>
@@ -321,6 +462,12 @@
     <scope>test</scope>
   </dependency>
   
+  <dependency>
+  	<groupId>com.vmlens</groupId>
+  	<artifactId>concurrent-junit</artifactId>
+  	<version>1.0.2</version>
+  	<scope>test</scope>
+  </dependency>
 </dependencies>
 <scm>
 <connection>scm:svn:http://127.0.0.1/home/ben/workspace/opennlp_processing</connection>
