Adding comments to the .gitmodules file.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,11 @@
+# This will define a submodule for the project. Point these submodules
+# to your private repo that contains the descritors.
+#
+# Please note that this will probably require significant modifications
+# to the XML code that you create. 
 [submodule "project_sql_dumps"]
 	path = project_sql_dumps
-	url = ttps://github.com/bholland/project_sql_dumps.git
+	url = https://github.com/bholland/project_sql_dumps.git
 [submodule "project_xml_descriptors"]
 	path = project_xml_descriptors
 	url = https://github.com/bholland/project_xml_descriptors.git
